adding horizontal scroll to code snippets in blog

--- a/src/pages/blogs/second.mdx
+++ b/src/pages/blogs/second.mdx
@@ -1,14 +1,26 @@
+import Navbar from "../../components/navbar"
+
+<Navbar />
 
 # Hello, world!
 
 Here's a color picker!
 
+To run this project locally, the follow tools need to be installed:
+
+* [Node.js](https://nodejs.org/en/download/)
+* [Yarn](https://classic.yarnpkg.com/en/docs/install)
+* [MongoDB](https://docs.mongodb.com/manual/administration/install-community/)
+
+Just run
+```
 const Blogs = () => {
     return (
         <div>
             Blog Home page
-            <Link to="/blogs/react-refs">React refs</Link>
+            <Link to="/blogs/react-refs">React refs</Link> jjjlllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll
             <Link to="/blogs/second">soc</Link>
         </div>
     )
 }
+```
