set up frontmatter for blog details

--- a/src/pages/blogs/third.mdx
+++ b/src/pages/blogs/third.mdx
@@ -1,5 +1,5 @@
 ---
-title: Hello, world!
+title: Second, world!
 path: /hello-world
 date: 2019-01-29
 ---
@@ -25,7 +25,7 @@ const Blogs = () => {
     return (
         <div>
             Blog Home page
-            <Link to="/blogs/react-refs">React refs</Link> jjjlllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll
+            <Link to="/blogs/react-refs">React refs</Link> 
             <Link to="/blogs/second">soc</Link>
         </div>
     )
