--- a/src/pages/blogs/third.mdx
+++ b/src/pages/blogs/third.mdx
@@ -1,7 +1,7 @@
 ---
 title: Second, world!
 path: /hello-world
-date: 2019-01-29
+image: ../../images/robert.jpg
 ---
 
 import Navbar from "../../components/navbar"
