profile card for blog

--- a/src/pages/blogs/second.mdx
+++ b/src/pages/blogs/second.mdx
@@ -4,10 +4,10 @@ path: /hello-world
 image: ../../images/robert.jpg
 ---
 import { Disqus } from 'gatsby-plugin-disqus';
-import Navbar from "../../components/navbar"
+import Layout from "../../components/layout"
 
 
-<Navbar />
+<Layout>
 
 # Hello, world!
 
@@ -31,4 +31,5 @@ const Blogs = () => {
     )
 }
 ```
-<Disqus />
+<Disqus /> 
+< /Layout>
