used GastbyImage and getImage instead of deprecated Img from gatsbyImage

--- a/src/pages/blogs/react-refs.mdx
+++ b/src/pages/blogs/react-refs.mdx
@@ -1,7 +1,8 @@
 ---
-title: Hello, world!
+title: What is useRefs in React.js?
 path: /hello-world
-image: ../../images/robert.jpg
+image: ../../images/userefreact.jpg
+description: React.js has had an edge over other user interface libraries and frameworksfor some time now, and while religious Vue and Angular developers will always...
 ---
 import { Disqus } from 'gatsby-plugin-disqus';
 import Layout from "../../components/layout"
