--- a/src/pages/blogs/second.mdx
+++ b/src/pages/blogs/second.mdx
@@ -1,7 +1,8 @@
 ---
-title: Hello, world!
+title: The second Blog
 path: /hello-world
-image: ../../images/robert.jpg
+image: ../../images/userefreact.jpg
+description: Here's a color picker! To run this project locally, the follow tools need to be installed
 ---
 import { Disqus } from 'gatsby-plugin-disqus';
 import Layout from "../../components/layout"
