--- a/src/pages/blogs/third.mdx
+++ b/src/pages/blogs/third.mdx
@@ -1,7 +1,8 @@
 ---
-title: Second, world!
+title: The third Blog
 path: /hello-world
-image: ../../images/robert.jpg
+image: ../../images/userefreact.jpg
+description: The description of the third blog
 ---
 
 import Navbar from "../../components/navbar"
