got the path in the frontmatter to point to respective blogpost

--- a/src/pages/blogs/react-refs.mdx
+++ b/src/pages/blogs/react-refs.mdx
@@ -1,6 +1,6 @@
 ---
 title: What is useRefs in React.js?
-path: /hello-world
+path: /blogs/react-refs
 image: ../../images/userefreact.jpg
 description: React.js has had an edge over other user interface libraries and frameworksfor some time now, and while religious Vue and Angular developers will always...
 ---
