--- a/src/pages/blogs/second.mdx
+++ b/src/pages/blogs/second.mdx
@@ -1,6 +1,6 @@
 ---
 title: The second Blog
-path: /hello-world
+path: /blogs/second
 image: ../../images/userefreact.jpg
 description: Here's a color picker! To run this project locally, the follow tools need to be installed
 ---
@@ -10,7 +10,7 @@ import Layout from "../../components/layout"
 
 <Layout>
 
-# Hello, world!
+# Hello, Second!
 
 Here's a color picker!
 
