--- a/src/pages/blogs/third.mdx
+++ b/src/pages/blogs/third.mdx
@@ -1,6 +1,6 @@
 ---
 title: The third Blog
-path: /hello-world
+path: /blogs/third
 image: ../../images/userefreact.jpg
 description: The description of the third blog
 ---
