made blog homepage responsive

--- a/src/pages/blogs/second.mdx
+++ b/src/pages/blogs/second.mdx
@@ -1,5 +1,5 @@
 ---
-title: The second Blog
+title: The Second Blog
 path: /blogs/second
 image: ../../images/userefreact.jpg
 description: Here's a color picker! To run this project locally, the follow tools need to be installed
