--- a/src/pages/blogs/third.mdx
+++ b/src/pages/blogs/third.mdx
@@ -1,5 +1,5 @@
 ---
-title: The third Blog
+title: The Third Blog
 path: /blogs/third
 image: ../../images/userefreact.jpg
 description: The description of the third blog
