blog pages image

--- a/src/pages/blogs/react-refs.mdx
+++ b/src/pages/blogs/react-refs.mdx
@@ -11,12 +11,14 @@ import BlogWrapper from "../../components/blogWrapper"
 <Layout>
 <BlogWrapper>
 
+ 
+
 React.js has had an edge over other user interface libraries and frameworks
 for some time now, and while religious Vue and Angular developers will always jump at
 any opportunity to have this argument, it is very clear that one has to have React in
 their tool box if they want to stay relevant in this fast moving Web development industry. 
 Talking about React, one of the slightly confusing parts of it is the concept of Refs.
-
+![theale](./gatsby-astronaut.png)
 React is peculiar for several reasons, one of them is the way the Document Object Mode (DOM)  
 is updated, it uses a Virtual DOM to keep a visual representation of the UI in memory and synced 
 with the “real” DOM, this means that the program interacts with the Virtual DOM, and the Virtual DOM is 
@@ -36,5 +38,7 @@ It also clearly states “Don’t overuse Refs”, so before you go about using 
 So there it is, Refs in React is just a means to access the DOM nodes directly, bypassing the virtual dome
 
 <Disqus />
+
 </BlogWrapper>
+
 </Layout>
