Blog featured image styling

--- a/src/pages/blogs/react-refs.mdx
+++ b/src/pages/blogs/react-refs.mdx
@@ -1,7 +1,7 @@
 ---
 title: What is useRefs in React.js?
 path: /blogs/react-refs
-image: ../../images/userefreact.jpg
+image: ../../pages/blogs/react-refs.jpg
 description: React.js has had an edge over other user interface libraries and frameworksfor some time now, and while religious Vue and Angular developers will always...
 ---
 import { Disqus } from 'gatsby-plugin-disqus';
@@ -18,7 +18,7 @@ for some time now, and while religious Vue and Angular developers will always ju
 any opportunity to have this argument, it is very clear that one has to have React in
 their tool box if they want to stay relevant in this fast moving Web development industry. 
 Talking about React, one of the slightly confusing parts of it is the concept of Refs.
-![theale](./gatsby-astronaut.png)
+![refs](./react-refs.jpg)
 React is peculiar for several reasons, one of them is the way the Document Object Mode (DOM)  
 is updated, it uses a Virtual DOM to keep a visual representation of the UI in memory and synced 
 with the “real” DOM, this means that the program interacts with the Virtual DOM, and the Virtual DOM is 
