--- a/src/pages/blogs/second.mdx
+++ b/src/pages/blogs/second.mdx
@@ -1,7 +1,7 @@
 ---
 title: The Second Blog
 path: /blogs/second
-image: ../../images/userefreact.jpg
+image: ../../pages/blogs/react.png
 description: Here's a color picker! To run this project locally, the follow tools need to be installed
 ---
 import { Disqus } from 'gatsby-plugin-disqus';
@@ -10,6 +10,7 @@ import Layout from "../../components/layout"
 
 <Layout>
 
+![refs](./react.png)
 # Hello, Second!
 
 Here's a color picker!
