--- a/src/pages/blogs/third.mdx
+++ b/src/pages/blogs/third.mdx
@@ -1,7 +1,7 @@
 ---
 title: The Third Blog
 path: /blogs/third
-image: ../../images/userefreact.jpg
+image: ../../pages/blogs/gatsby-astronaut.png
 description: The description of the third blog
 ---
 
@@ -10,6 +10,7 @@ import Navbar from "../../components/navbar"
 
 <Navbar />
 
+![refs](./gatsby-astronaut.png)
 # Hello, world!
 
 Here's a color picker!
