workinng on blog

--- a/src/pages/blogs/second.mdx
+++ b/src/pages/blogs/second.mdx
@@ -6,16 +6,18 @@ description: Here's a color picker! To run this project locally, the follow tool
 ---
 import { Disqus } from 'gatsby-plugin-disqus';
 import Layout from "../../components/layout"
-
+import BlogWrapper from "../../components/blogWrapper"
 
 <Layout>
+<BlogWrapper>
 
 ![refs](./react.png)
+
 # Hello, Second!
 
-Here's a color picker!
+Lorem Ipsum
 
-To run this project locally, the follow tools need to be installed:
+This is a dummy blog to test out the project
 
 * [Node.js](https://nodejs.org/en/download/)
 * [Yarn](https://classic.yarnpkg.com/en/docs/install)
@@ -34,4 +36,6 @@ const Blogs = () => {
 }
 ```
 <Disqus /> 
-< /Layout>
+
+</BlogWrapper>
+</Layout>
